 + New call: GetVisualGearType(vgUid) -- returns the visual gear type
 + New call: SetAmmoTexts(ammoType, name, caption, description) -- Overwrite displayed name and description of an ammo type
 + New call: SetAmmoDescriptionAppendix(ammoType, descAppend) -- Append a custom text to the description of an ammo type without overwriting it
 + New hook: onVisualGearAdd(vgUid) -- called when a visual gear is added
 + New hook: onVisualGearDelete(vgUid) -- called when a visual gear is deleted
 + New variable: AirMinesNum -- Number of air mines being placed on a medium-sized map
 + New variable: WorldEdge -- World edge type (weNone, weWrap, weBounce, weSea)
 + Locale library: loc_noop -- Mark string for translation but don't translate it

0.9.21 -> 0.9.22
 + New Weapon / Map object: AirMine (floating mine that will follow nearby hedgehogs)
 + Extensive changes to TechRacer: Variable terrain types, enhanced parameters, hwmap interpreter, fuel limiter, etc. 
 + HedgeEditor - create missions/etc. in-game! see http://hedgewars.org/HedgeEditor
 + Map previews can now take script parameters into account and preview waypoints in TechRacer
 + Added a couple new flags
 + Various tweaks to the interface and in-game chat
 + Divided teams options will now just be ignored when more/less than 2 teams/clans, instead of displaying a fatal error
 + Added 6 TechRacer maps to TechMaps
 + Added 3 SpeedShoppa Challenges: Shoppa Love, Ropes and Crates, The Customer is King
 + Hammer damage is now rounded up. This means it can be used to execute hedgehogs with only 1 hp.
 + Improved "Art" theme.
 * Generated bridges/girders are now connected better to the land mass
 * Fixed rubberband sprite
 * Fixed Wind-Indicator being wrong in certain situations
 * Melon Bomb Pieces now bounce on Rubberband
 * Reduced menu music volume
 * The game will now fallback to default voicepack if a team's voicepack is not locally installed. (Instead of rendering team voiceless)